--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,19 @@
-  <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <img class="logo" width="80%" src="{{site.baseurl}}/{{site.logo}}" />
                 </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        {% for network in site.social %}
-                        <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul>
-                </div>
+                <span class="copyright">Copyright &copy; {{ site.org }}, {{ 'now' | date: "%Y" }}</span>
+            </div>
+            <div class="col-md-2 divider"></div>
+            <div class="col-md-4">
+                <span class="copyright">
+                    本站由 <a href="https://github.com/jekyll/jekyll">Jekyll</a> 生成，
+                    基于 <a href="https://y7kim.github.io/agency-jekyll-theme/">Agency Jekyll Theme</a> 主题
+                </span>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
