--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+                <a href="{{site.baseurl}}/" class="navbar-brand page-scroll">{{site.title}}</a>
+                <img class="navbar-brand page-scroll" src="{{site.baseurl}}/{{site.logo}}" />
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,19 +20,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/index.html#intro">课程介绍</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/index.html#materials">课程资料</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/index.html#team">教学团队</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="{{site.baseurl}}/index.html#contact">联系我们</a>
                     </li>
                 </ul>
             </div>
@@ -44,9 +42,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">欢迎选修计算机组成和体系结构课程！</div>
+                <div class="intro-lead-in">_</div>
+                <div class="intro-heading">开启深入了解计算机系统的旅程</div>
+                <a href="#services" class="page-scroll btn btn-xl">了解更多</a>
             </div>
         </div>
     </header>
@@ -55,4 +54,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-
