--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,37 +1,24 @@
 <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">教学团队</h2>
+                    <h3 class="section-subheading text-muted">TEACHING STAFF</h3>
                 </div>
             </div>
             <div class="row">
-                {% for member in site.people %}
+                {% for member in page.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li>
-                                <a href="{{ network.url }}">
-                                    <i class="fa fa-{{ network.title }}"></i>
-                                </a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
+                        <img width="70%" src="img/team/{{ member.pic }}" class="img-responsive img-circle" alt="">
+                        <h4 class="text-left">{{member.position}} {{ member.name }}</h4>
+                        <p class="text-muted text-left">{{ member.bio }}</p>
+                        <p class="text-left">课序号：{{ member.classid }}</p>
+                        <p class="text-left">联系方式：{{ member.email }}</p>
                     </div>
                 </div>
                 {% endfor %}
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
             </div>
         </div>
     </section>
