Add the license
Signed-off-by: Kai Gao <emiapwil@gmail.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,28 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 text-left">
                 <div class="row">
-                    <img class="logo" width="80%" src="{{site.baseurl}}/{{site.logo}}" />
+                    <img class="logo" width="70%" src="{{site.baseurl}}/{{site.logo}}" />
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+                        <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+                    </a>
                 </div>
+                <div class="row">
                 <span class="copyright">Copyright &copy; {{ site.org }}, {{ 'now' | date: "%Y" }}</span>
+                </div>
+                <div class="row">
+                <span class="copyright">
+                    本站内容采用 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons BY-NC-SA 4.0 International License
+                    </a> 授权
+                </span>
+                </div>
             </div>
             <div class="col-md-2 divider"></div>
             <div class="col-md-4">
                 <span class="copyright">
                     本站由 <a href="https://github.com/jekyll/jekyll">Jekyll</a> 生成，
-                    基于 <a href="https://y7kim.github.io/agency-jekyll-theme/">Agency Jekyll Theme</a> 主题
+                    基于 <a href="https://y7kim.github.io/agency-jekyll-theme/">Agency</a> 主题
                 </span>
             </div>
         </div>
