--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
                 <div class="intro-lead-in">欢迎选修计算机组成和体系结构课程！</div>
                 <div class="intro-lead-in">_</div>
                 <div class="intro-heading">开启深入了解计算机系统的旅程</div>
-                <a href="#services" class="page-scroll btn btn-xl">了解更多</a>
+                <a href="#intro" class="page-scroll btn btn-xl">了解更多</a>
             </div>
         </div>
     </header>
