--- a/_includes/materials.html
+++ b/_includes/materials.html
@@ -20,7 +20,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ post.title }}</h4>
-                        <span class="text-muted">{{ post.subtitle }}</span>
+                        <p class="text-muted">{{ post.subtitle }}</p>
                     </div>
                 </div>
             {% endfor %}
