--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -419,6 +419,7 @@ section h3.section-subheading {
     font-family: {{ site.data.template.font.secondary }};
     font-size: 16px;
     font-style: italic;
+    height: 50px;
 }
 
 #portfolio * {
@@ -724,6 +725,11 @@ footer {
     padding: 25px 0;
     text-align: center;
     background-color: #777;
+}
+
+footer .copyright a {
+    color: white;
+    text-decoration: underline;
 }
 
 footer .container {
