--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <img class="logo" width="70%" src="{{site.baseurl}}/{{site.logo}}" />
                     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-                        <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+                        <img alt="" style="border-width:0" src="img/copyright.png" />
                     </a>
                 </div>
                 <div class="row">
@@ -19,11 +19,17 @@
                 </div>
             </div>
             <div class="col-md-2 divider"></div>
-            <div class="col-md-4">
+            <div class="col-md-4 text-left">
                 <span class="copyright">
                     本站由 <a href="https://github.com/jekyll/jekyll">Jekyll</a> 生成，
                     基于 <a href="https://y7kim.github.io/agency-jekyll-theme/">Agency</a> 主题
                 </span>
+
+                <div>
+                    <span class="copyright">
+                    ICP证：备案审核中
+                    </span>
+                </div>
             </div>
         </div>
     </div>
