--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -22,6 +22,10 @@
                                 <li>Date:
                                     <strong>{{ post.project-date }} </strong>
                                 </li>
+
+                                <li>Source:
+                                    <a href="assets/file/{{ post.file}}">PDF</a>
+                                </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
